--- a/index.html
+++ b/index.html
@@ -1,32 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Holiday Destination Showcase</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abhava+Libre:wght@400;500;600&family=Playfair+Libre&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-
-      <div class="home">
-        <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/bgvid.mp4?alt=media&token=d382250a-03b5-4cc3-9794-435a42529663" type="video/mp4" />
-        </video>
-        <div class="overlay"></div>
-        <div class="home-content">
-          <h1>Holiday Destination Planner</h1>
-		  <h2>Click the button below if you're unsure of your holiday destination. We'll show you a bunch of different places to help you choose.</h2>
-          <div class="middle-line"></div>
-          <button onclick="window.location.href='wk10.html';">Click Here</button>
-        </div>
-      </div>
-
-  </body>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
