--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+ <a href="./homepage.html">Click here to see the project</a> 
 </body>
 </html>
