--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/bgvid.mp4?alt=media&token=d382250a-03b5-4cc3-9794-435a42529663" type="video/mp4" />
+          <source src="https://streamable.com/e/bd68pp" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
