--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
   <body>
      <div class="home">
         <video autoplay muted loop>
-          <source src="https://streamable.com/e/bd68pp" type="video/mp4" />
+          <source src="https://streamable.com/e/bd68pp?autoplay" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
