--- a/site2.html
+++ b/site2.html
@@ -17,7 +17,7 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/video3.mp4?alt=media&token=b2692345-9d9d-40ec-b5c0-dada79438d58" type="video/mp4" />
+          <source src="https://i.imgur.com/0oNiUYL.mp4" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
