--- a/site3.html
+++ b/site3.html
@@ -18,7 +18,7 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/video4.mp4?alt=media&token=55f51502-159b-4f91-8227-699180606d44" type="video/mp4" />
+          <source src="https://i.imgur.com/65jHZRm.mp4" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
