--- a/site5.html
+++ b/site5.html
@@ -18,11 +18,11 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/video6.mp4?alt=media&token=810b9dce-c678-4baf-a42f-83a5b6878aa3" type="video/mp4" />
+          <source src="https://i.imgur.com/CnVwJAY.mp4" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
-          <h1>Hollywood, USA</h1>
+          <h1>New York, <br> USA</h1>
           <div class="middle-line"></div>
           <button onclick="window.location.href='site6.html';">More?</button>
         </div>
