--- a/site6.html
+++ b/site6.html
@@ -18,11 +18,11 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/video7.mp4?alt=media&token=2d340f8a-699b-408c-a779-c88d1d997fdf" type="video/mp4" />
+          <source src="https://i.imgur.com/5Xx3QNQ.mp4" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
-          <h1>Sydney, <br>Australia</h1>
+          <h1>Cape Town, <br>South Africa</h1>
           <div class="middle-line"></div>
           <button onclick="window.location.href='site7.html';">Last but not least</button>
         </div>
