--- a/site7.html
+++ b/site7.html
@@ -18,7 +18,7 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/video8.mp4?alt=media&token=50a29b74-2590-4353-af22-eb98d01442c4" type="video/mp4" />
+          <source src="https://i.imgur.com/tIMM3MG.mp4" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">
