--- a/wk10.html
+++ b/wk10.html
@@ -50,7 +50,7 @@
 
       <div class="home">
         <video autoplay muted loop>
-          <source src="https://firebasestorage.googleapis.com/v0/b/holidayplanner-7619a.appspot.com/o/video2.mp4?alt=media&token=37153d53-f58a-4fc1-b199-3128f7501a12" type="video/mp4" />
+          <source src="https://i.imgur.com/Q8OKrzp.mp4" type="video/mp4" />
         </video>
         <div class="overlay"></div>
         <div class="home-content">	
